--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,1 +1,138 @@
-
+@font-face {
+    font-family: 'swash';
+    src: url(/fonts/BerkshireSwash-Regular.ttf);
+}
+.bg-colr{
+    background-color: #3d763e;
+}
+.nav-height{
+    height: 120px;
+}
+.icon-w{
+    width: 40px;
+    height: 40px;
+}
+.icon-pt{
+    padding-top: 35px;
+}
+.head-bg{
+/* background: linear-gradient(to bottom left,#417b41,#5bb350); */
+background: rgb(58,126,55);
+background: linear-gradient(120deg, rgba(58,126,55,1) 0%, rgba(91,179,80,1) 100%, rgba(91,179,80,1) 100%, rgba(31,31,31,1) 100%);
+height: 700px;
+}
+.head-bg2{
+    background-image: url(/images/backgroundPattern.png);
+    height: 700px;
+}
+.font-swash{
+    font-family: 'swash';
+}
+.txt1{
+    font-family: 'swash';
+    color: #ffff;
+    font-size: 45px;
+}
+.txt2{
+    font-family: 'swash';
+    color: #ffff;
+    font-size: 7rem;
+}
+.head-p-padd{
+    padding: 0px 140px;
+}
+.head-btn
+{
+    margin-left: -209px;
+    font-size: 35px !important;
+    padding: 0px 45px !important;
+    font-weight: 500 !important;
+    border-radius: 35px !important;   
+    color: #395f2b;
+}
+.r2-colbg{
+    background-color: #f1cb38;
+}
+.page3-bg{
+    background-color: #57bc4b;
+    height: 850px;
+}
+.chef-bg1{
+    background-image: url(../images/PattrenChef.png);
+}
+.pageextra{
+    background-color: #5bae50;
+    height: 250px;
+}
+.page3-img{
+    height: 600px;
+    width: 600px;
+}
+.abt-food-txt{
+    font-size: 75px;
+    font-family: "swash";
+}
+.rstrNo1{
+    font-size: 40px;
+    font-family: 'swash';
+}
+.mt-6{
+    margin-top: 12rem;
+}
+.pt-6{
+    padding-top: 8rem;
+}
+.px-6{
+    padding: 0 8rem;
+}
+.about-btn{
+    background-color: #ffff;
+    color: #395f2b;
+    margin-top: 3rem;
+    margin-left: 45px;
+    padding: 0px 55px;
+    font-size: 35px;
+    font-weight: 500;
+    border-radius: 35px;
+}
+.about-mt-6{
+    margin-top: -145px;
+}
+.about-curve{
+    border-radius: 330px 0px 0px 330px;
+    height: 600px;
+}
+.img-star img{
+    width: 159px;
+    height: 150px;
+}
+.head-star{
+    margin-left: 5px;
+}
+.para-star{
+    padding-right: 184px;
+}
+.r6-bgcolr{
+    background-color: #5bae50;
+}
+.chef-txt1{
+    font-size: 75px;
+    font-family: 'swash';
+    margin-bottom: -4px;
+}
+.chef-txt2{
+    font-size: 25px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.name-txt{
+    color: #ffff;
+    font-size: 35px;
+    margin-top: -110px;
+    margin-left: -20px;
+}
+.work-txt{
+    color: #ffff;
+    font-size: 20px;
+    margin-left: -20px;
+    margin-top: -10px;
+}
